fixed horizontal scroll on mobile for Chrome

--- a/styles/sass/_contactMediaQueries.scss
+++ b/styles/sass/_contactMediaQueries.scss
@@ -35,12 +35,6 @@
 }
 
 @media (max-width: 480px) {
-    html, body {
-        overflow-x: hidden;
-    }
-    body {
-        position: relative
-    }
     .contact h1 {
         font-size: 2rem;
         position: relative;
