--- a/styles/sass/_homeMediaQueries.scss
+++ b/styles/sass/_homeMediaQueries.scss
@@ -127,12 +127,6 @@
 }
 
 @media (max-width: 480px) { 
-    html, body {
-        overflow-x: hidden;
-    }
-    body {
-        position: relative
-    }
     .home header {
         background-position: center;
         padding-left: 25px;
