--- a/styles/styles.css
+++ b/styles/styles.css
@@ -275,9 +275,17 @@ a {
 }
 
 /* ---------------GLOBAL STYLES--------------- */
+html, body {
+  overflow-x: hidden;
+}
+
 html {
   font-size: 125%;
   /*20px*/
+}
+
+body {
+  position: relative;
 }
 
 .wrapper {
